# CG_Sem2

./: CMakeLists.txt  DirectXApp.cpp  DirectXApp.h  ObjectConstants.h  Parser.cpp  Window.cpp  main.cpp  shaders.hlsl
h/: DirectXApp.h  GBuffer.h  ObjectConstants.h  RenderingSystem.h
src/: DirectXApp.cpp  GBuffer.cpp  RenderingSystem.cpp  lighting.hlsl  shaders.hlsl
